# disguvery

./: AUTHORS.rst  README.md  pyproject.toml  requirements.txt
disguvery/: data_processing.py  disguvery.py  display.py  file_handling.py  image_processing.py  ui_basicmembrane.py  ui_batchprocessing.py  ui_canvas.py  ui_channelmanager.py  ui_custom_widgets.py  ui_encapefficiency.py  ui_enhancement.py  ui_filemanager.py  ui_intprofiles.py  ui_menu.py  ui_refinedmembrane.py  ui_vesdetection.py  ui_vessizedist.py  vesicle_detection.py
test-data/: bma-cht.txt  bma-ff.txt  delete-detected-vesicles.txt  detection-cht.txt  detection-ff.txt  detection-mtm.txt  encapsulation-basic.txt  encapsulation-refined.txt  explanation  intprof-multichannel.txt  intprof-singlechannel.txt  membrane-enhancement.txt  rmd-cht.txt
